# CS403

./: README.md
compsci403_assignment2/: CMakeLists.txt  depth_pointcloud_viewer.rviz  manifest.xml
compsci403_assignment2/src/: assignment2.cpp  kinect_intrinsics_service.cpp
compsci403_assignment2/srv/: Get3DPointFromDepthSrv.srv  Get3DPointFromDisparitySrv.srv  GetDepthFromDisparitySrv.srv  GetIntrinsicsSrv.srv  GetPixelFrom3DPointSrv.srv
compsci403_assignment3/: CMakeLists.txt  manifest.xml  plane_fitting_viewer.rviz
compsci403_assignment3/msg/: PlaneParametersMsg.msg
compsci403_assignment3/msg_gen/lisp/: PlaneParametersMsg.lisp  _package.lisp  _package_PlaneParametersMsg.lisp  compsci403_assignment3-msg.asd
compsci403_assignment3/src/: assignment3.cpp  eigen_examples.cpp  testClient.cpp
compsci403_assignment3/src/compsci403_assignment3/msg/: _PlaneParametersMsg.py  __init__.py
compsci403_assignment3/src/compsci403_assignment3/srv/: _FindInliersSrv.py  _FitBestPlaneSrv.py  _FitMinimalPlaneSrv.py  _TransformPointSrv.py  __init__.py
compsci403_assignment3/srv/: FindInliersSrv.srv  FitBestPlaneSrv.srv  FitMinimalPlaneSrv.srv  TransformPointSrv.srv
compsci403_assignment3/srv_gen/lisp/: FindInliersSrv.lisp  FitBestPlaneSrv.lisp  FitMinimalPlaneSrv.lisp  TransformPointSrv.lisp  _package.lisp  _package_FindInliersSrv.lisp  _package_FitBestPlaneSrv.lisp  _package_FitMinimalPlaneSrv.lisp  _package_TransformPointSrv.lisp  compsci403_assignment3-srv.asd
compsci403_assignment4/: CMakeLists.txt  manifest.xml
compsci403_assignment4/msg/: ObstacleMsg.msg
compsci403_assignment4/msg_gen/lisp/: ObstacleMsg.lisp  _package.lisp  _package_ObstacleMsg.lisp  compsci403_assignment4-msg.asd
compsci403_assignment4/src/: assignment4.cpp  testClient.cpp
compsci403_assignment4/srv_gen/lisp/: CheckPointSrv.lisp  GetCommandVelSrv.lisp  GetFreePathSrv.lisp  _package.lisp  _package_CheckPointSrv.lisp  _package_GetCommandVelSrv.lisp  _package_GetFreePathSrv.lisp  compsci403_assignment4-srv.asd
compsci403_assignment6/: CMakeLists.txt  Makefile  manifest.xml  rrt_viewer.rviz
compsci403_assignment6/msg/: RRTNode.msg
compsci403_assignment6/msg_gen/lisp/: RRTNode.lisp  _package.lisp  _package_RRTNode.lisp  compsci403_assignment6-msg.asd
compsci403_assignment6/src/: assignment6.cpp
compsci403_assignment6/srv/: BuildRRTSrv.srv  CheckExtensionSrv.srv  ExtendNodeSrv.srv  RRTPlanSrv.srv  RandomConfigSrv.srv
compsci403_assignment6/srv_gen/lisp/: BuildRRTSrv.lisp  CheckExtensionSrv.lisp  ExtendNodeSrv.lisp  RRTPlanSrv.lisp  RandomConfigSrv.lisp  _package.lisp  _package_BuildRRTSrv.lisp  _package_CheckExtensionSrv.lisp  _package_ExtendNodeSrv.lisp  _package_RRTPlanSrv.lisp  _package_RandomConfigSrv.lisp  compsci403_assignment6-srv.asd
(+56 files in other folders)
