cmake_minimum_required(VERSION 2.4.6)
include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)

ROSBUILD_INIT()

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

ROSBUILD_GENMSG()
ROSBUILD_GENSRV()

SET(libs roslib roscpp)

ROSBUILD_ADD_EXECUTABLE(assignment3 src/assignment3.cpp)
TARGET_LINK_LIBRARIES(assignment3 ${libs})

ROSBUILD_ADD_EXECUTABLE(testClient src/testClient.cpp)
TARGET_LINK_LIBRARIES(testClient ${libs})

ADD_EXECUTABLE(eigen_examples src/eigen_examples.cpp)

add_compile_options(-std=c++11)
